# rust-module-boilerplate

./: .travis.yml  package-lock.json  package.json  readme.md  run-test.js  update.js
boilerplate/: .appveyor.yml  Cargo.toml  license-mit  readme.md
cli-boilerplate/: .appveyor.yml  .travis.yml  Cargo.toml  readme.md
cli-boilerplate/ci/: before_deploy.ps1  before_deploy.sh
generator-rustm/: LICENSE  README.md  changelog.md  package-lock.json  package.json  readme.md
generator-rustm/__tests__/: app.js
generator-rustm/example/: .appveyor.yml  .travis.yml  .yo-rc.json  Cargo.toml  license-mit  readme.md
generator-rustm/generators/app/: index.js  utils.js
generator-rustm/generators/app/templates/: Cargo.toml  __travis.yml  readme.md
generator-rustmc/: .yo-rc.json  README.md  changelog.md  package-lock.json  package.json  readme.md
generator-rustmc/__tests__/: app.js
generator-rustmc/example/: .appveyor.yml  .travis.yml  .yo-rc.json  Cargo.toml  readme.md
generator-rustmc/example/ci/: before_deploy.ps1  before_deploy.sh
generator-rustmc/generators/app/: index.js  utils.js
generator-rustmc/generators/app/templates/: Cargo.toml  __appveyor.yml  readme.md
generator-rustmc/generators/app/templates/ci/: before_deploy.ps1
