[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = ["development-tools"]
description = "My badass module"
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["generator-rustm"]
license = "MIT/Apache-2.0"
name = "example_module"
repository = "https://github.com/user/rust-example"
version = "0.0.1"

[badges.appveyor]
project_name = "user/rust-example"
repository = "user/rust-example"

[badges.travis-ci]
repository = "user/rust-example"

[dependencies]
