[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = ["development-tools"]
description = "My superior module"
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["generator-rustm"]
license = "MIT/Apache-2.0"
name = "example-module"
repository = "https://github.com/user/rust-example-module"
version = "0.0.1"

[badges.appveyor]
project_name = "user/rust-example-module"
repository = "user/rust-example-module"

[badges.travis-ci]
repository = "user/rust-example-module"

[dependencies]
