[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]
description = "My first-class module"
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["git"]
license = "MIT/Apache-2.0"
name = "example_foo"
repository = "https://github.com/sanemat/example_foo/"
version = "0.1.0"

[[bin]]
name = "example_foo"
path = "src/main.rs"
[badges.appveyor]
project_name = "sanemat/example_foo"
repository = "sanemat/example_foo"

[badges.travis-ci]
repository = "sanemat/example_foo"

[dependencies]
