[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]
description = "My geometric module"
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["git"]
license = "MIT/Apache-2.0"
name = "example_foo"
repository = "https://github.com/username/example_foo/"
version = "0.1.0"

[[bin]]
name = "example-foo"
path = "src/main.rs"
[badges.appveyor]
project_name = "username/example_foo"
repository = "username/example_foo"

[badges.travis-ci]
repository = "username/example_foo"

[dependencies]
