[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]
description = "My epic module"
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["generator-rustmc"]
license = "MIT/Apache-2.0"
name = "example-cli"
repository = "https://github.com/user/rust-example-cli"
version = "0.1.0"

[[bin]]
name = "example"
path = "src/main.rs"
[badges.appveyor]
project_name = "user/rust-example-cli"
repository = "user/rust-example-cli"

[badges.travis-ci]
repository = "user/rust-example-cli"

[dependencies]
