[package]
authors = ["<%= name %> <<%= email %>>"]
categories = [
    "command-line-interface",
    "command-line-utilities",
    "development-tools",
]
description = "<%= moduleDescription %>"
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["generator-rustmc"]
license = "MIT/Apache-2.0"
name = "<%= moduleName %>"
repository = "https://github.com/<%= githubUsername %>/<%= directoryName %>"
version = "0.1.0"

[[bin]]
name = "<%= commandName %>"
path = "src/main.rs"
[badges.appveyor]
project_name = "<%= githubUsername %>/<%= directoryName %>"
repository = "<%= githubUsername %>/<%= directoryName %>"

[badges.travis-ci]
repository = "<%= githubUsername %>/<%= directoryName %>"

[dependencies]
